# drf_api_permissions_postgres

./: README.md  pyproject.toml
books_api/: settings.py  urls.py
post_book/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
post_book/migrations/: 0001_initial.py
